# gen_iv_battle_frontier_analyzer

./: CMakeLists.txt  README.md  ability.h  battle_engine.h  battle_state.h  category.h  config.h  end_of_turn_effects.h  item.h  main.cpp  move.h  move_execution.h  nature.h  pokemon.h  policies.h  stat.h  thread_pool.cpp  thread_pool.h  type.h  util.h
battle_factory/: factory_data_source.cpp  factory_data_source.h
data/fresh/: base_stats  battle_factory_pokemon
serebii/: serebii_pokemon_data_source.cpp  serebii_pokemon_data_source.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/data_sources/: CMakeLists.txt
src/data_sources/battle_factory/: CMakeLists.txt  factory_data_source.cpp  factory_data_source.h
src/data_sources/serebii/: CMakeLists.txt  serebii_pokemon_data_source.cpp  serebii_pokemon_data_source.h
src/engine/: CMakeLists.txt  battle_engine.h  battle_state.h  end_of_turn_effects.h  move_execution.h  move_heuristic.h  policies.h  round_robin.h  thread_pool.cpp
src/models/: CMakeLists.txt  item.h  move.h  stat.h  type.h
test/: CMakeLists.txt  test_runner.cpp  tests_todo.txt
test/engine/: CMakeLists.txt  mocks.h  move_execution.cpp  move_execution_test.cpp
test/engine/battle_engine/: CMakeLists.txt  pp_tests.cpp
test/engine/battle_state/: CMakeLists.txt  battle_state_tests.cpp
test/engine/move_execution/: CMakeLists.txt  confusion_tests.cpp  damage_tests.cpp  freeze_test.cpp  moonlight_tests.cpp  move_execution_test.cpp  paralysis_test.cpp  special_attack_damage_tests.cpp  stat_change_tests.cpp  struggle_tests.cpp
